# MRBlackbox

./: .gitignore  README.md  changelog.md  pyproject.toml  requirements.txt
mr_blackbox/: i18n.py
mr_blackbox/adapters/: claude.py  codex.py  gemini.py
mr_blackbox/cli/: dashboard.py  main.py
mr_blackbox/engine/: cost_engine.py  intelligence.py  models.py
mr_blackbox/storage/: manager.py
mr_blackbox/worker/: main.py
